--- a/index.css
+++ b/index.css
@@ -5,8 +5,9 @@ body{
 }
 header{
     background-color: #1A4D2E;
-    padding: 5px 15px;
+    padding: 20px 15px;
     overflow: hidden;
+    margin-bottom: 20px;;
 }
 header h1{
     color:#F5EFE6;
@@ -36,7 +37,77 @@ header h1{
     color:#F5EFE6;
     font-family:'Coiny';
     text-align:center;
-    padding:10px;
+    padding:20px;
     box-sizing:border-box;
     font-size:1.2rem;
+}
+.timeline{
+    padding:100px 100px;
+    background-color: #F5EFE6;
+    font-family: 'Coiny';
+}
+.carousel{
+    position:relative;
+    background-color: white;
+    top:70px;
+}
+.carousel-indicators{
+    position:absolute;
+    top:-48px;
+    width:75%;
+    margin-left:14%;
+    position:static;
+    margin-bottom:40px;
+}
+.experience-slide-one{
+    top:50px;
+    padding: 0px;
+}
+.carousel-indicators button{
+    text-indent:0!important;
+    background: 0 0;
+    border:none;
+    margin:0!important;
+    position:relative;
+    width:25%!important;
+}
+.carousel-indicators button::before{
+    position:absolute;
+    content:"";
+    border-top:1px solid #c8cbd0;
+    width:100%;
+    left:0;
+}
+.carousel-indicators button h4{
+    margin-top:-41px;
+    position:absolute;
+    left:52%;
+    transform:translate(-50%);
+    font-size:20px;
+}
+.carousel-indicators button i{
+    margin-top:10px;
+    position:absolute;
+}
+.carousel-indicators button.active i{
+    color:#1A4D2E;
+}
+.carousel-indicators button.active h4{
+    color:#1A4D2E;
+    font-size:20px;
+    position:absolute;
+    text-align: center;
+    margin-top:-49px;
+}
+.experience-slide-text h3{
+    margin-bottom: 30px;
+    font-size:27px;
+    color:#1A4D2E;
+}
+.carousel-control-next, .carousel-control-prev{
+    width:2%;
+}
+.carousel-control-next-icon i, .carousel-control-prev-icon i{
+    font-size:30px;
+    color:black;
 }
